bin/tests/snapshots/bool_comparison__lint_82b623ef0ecd1e0e70c1dbe39f02832657a82dd5a58392f23345b22467a89b1a.snap
---
source: bin/tests/bool_comparison.rs
---
true == true
---
[W01] Warning: Equality comparison between boolean literals
   ╭─[<temp_file_path>:1:1]
   │
 1 │ true == true
   · ──────┬─────  
   ·       ╰─────── Equality comparison between boolean literals
───╯
