bin/tests/snapshots/bool_comparison__lint_852249844e4f5e03707d323181ca8645f39f390d9a91490dd6926c3df73f1912.snap
---
source: bin/tests/bool_comparison.rs
expression: snapshot
---
expression:
true != true
---
[W01] Warning: Equality comparison between boolean literals
   ╭─[<temp_file_path>:1:1]
   │
 1 │ true != true
   · ──────┬─────  
   ·       ╰─────── Equality comparison between boolean literals
───╯
