bin/tests/snapshots/bool_comparison__lint_8d7a65112bef94acd8528b1b2dcc040b63264d245362818202598eb913518c95.snap
---
source: bin/tests/bool_comparison.rs
---
true != false

---
[W01] Warning: Equality comparison between boolean literals
   ╭─[<temp_file_path>:1:1]
   │
 1 │ true != false
   · ──────┬──────  
   ·       ╰──────── Equality comparison between boolean literals
───╯
