bin/tests/snapshots/bool_comparison__lint_900c48144b50b35f3364bdc026673948f702d2b4051fa84bb17d00c671e851ba.snap
---
source: bin/tests/bool_comparison.rs
---
true == false

---
[W01] Warning: Equality comparison between boolean literals
   ╭─[<temp_file_path>:1:1]
   │
 1 │ true == false
   · ──────┬──────  
   ·       ╰──────── Equality comparison between boolean literals
───╯
