bin/tests/snapshots/bool_comparison__lint_9c321bf97c371d44005347699e5488aca63e765ac20c6fb182696757ae3914e5.snap
---
source: bin/tests/bool_comparison.rs
---
true == true

---
[W01] Warning: Equality comparison between boolean literals
   ╭─[<temp_file_path>:1:1]
   │
 1 │ true == true
   · ──────┬─────  
   ·       ╰─────── Equality comparison between boolean literals
───╯
