bin/tests/snapshots/bool_comparison__lint_b4fc9d3a2840d6b8e6bb669c846201b896caeddd89a78972ec84e2f4b399cdc5.snap
---
source: bin/tests/bool_comparison.rs
---
false == true

---
[W01] Warning: Equality comparison between boolean literals
   ╭─[<temp_file_path>:1:1]
   │
 1 │ false == true
   · ──────┬──────  
   ·       ╰──────── Equality comparison between boolean literals
───╯
