bin/tests/snapshots/bool_comparison__lint_b7997253f3c200342c9cfc265b84b51608e1d81918a23842fd269536627230e2.snap
---
source: bin/tests/bool_comparison.rs
---
false != false

---
[W01] Warning: Equality comparison between boolean literals
   ╭─[<temp_file_path>:1:1]
   │
 1 │ false != false
   · ───────┬──────  
   ·        ╰──────── Equality comparison between boolean literals
───╯
