bin/tests/snapshots/bool_comparison__lint_ba56854c55bd3954b56d4e0c3d32b65cd144d55b060637c5ff8085d81bef6c49.snap
---
source: bin/tests/bool_comparison.rs
---
false == true
---
[W01] Warning: Equality comparison between boolean literals
   ╭─[<temp_file_path>:1:1]
   │
 1 │ false == true
   · ──────┬──────  
   ·       ╰──────── Equality comparison between boolean literals
───╯
