bin/tests/snapshots/bool_comparison__lint_c1f534a049c1234ebd739576913fd737a51cab2adb707b35c05bf33a11d7c6e3.snap
---
source: bin/tests/bool_comparison.rs
---
false == false

---
[W01] Warning: Equality comparison between boolean literals
   ╭─[<temp_file_path>:1:1]
   │
 1 │ false == false
   · ───────┬──────  
   ·        ╰──────── Equality comparison between boolean literals
───╯
