bin/tests/snapshots/bool_comparison__lint_e242c6e0c4298e00ab2cae2f89de63cc77e833cf6ad2c8eb1047a38df7f25564.snap
---
source: bin/tests/bool_comparison.rs
---
expression:
false != false
---
[W01] Warning: Equality comparison between boolean literals
   ╭─[<temp_file_path>:1:1]
   │
 1 │ false != false
   · ───────┬──────  
   ·        ╰──────── Equality comparison between boolean literals
───╯
