bin/tests/snapshots/bool_comparison__lint_eb450df0fb6d76e9df94f175a6b87a7c1a667495e18432ed8f38540fd051cec1.snap
---
source: bin/tests/bool_comparison.rs
---
true == false
---
[W01] Warning: Equality comparison between boolean literals
   ╭─[<temp_file_path>:1:1]
   │
 1 │ true == false
   · ──────┬──────  
   ·       ╰──────── Equality comparison between boolean literals
───╯
